[gd_scene load_steps=7 format=2]

[ext_resource path="res://prefabs/Interactables/InteractableNoPreset.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Interactables/Door_Generic.gd" type="Script" id=2]
[ext_resource path="res://Textures/objects/SteelDoor.png" type="Texture" id=3]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
params_cull_mode = 2
albedo_texture = ExtResource( 3 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 1, 0.121462 )

[node name="SteelDoor" type="Spatial"]
script = ExtResource( 2 )

[node name="DoorOpenMesh" type="Spatial" parent="."]
visible = false

[node name="DoorClosedMesh" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="DoorClosedMesh"]
transform = Transform( 2.04596, 0, 0, 0, 3.33274, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1.713, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 3 )

[node name="Interactable" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.69479, 0, 0, 0, 1.06646, 0, 0, 0 )

[node name="CollisionShape2" type="CollisionShape" parent="Interactable"]
shape = SubResource( 3 )
[connection signal="emit_prompt" from="Interactable" to="." method="_on_Interactable_emit_prompt"]
[connection signal="interaction" from="Interactable" to="." method="_on_Interactable_interaction"]
